gccida/g0/debug_bitmap_file
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/debug_bitmap_file/src/bitmap.c:1230:16: error: use of undeclared identifier 'off_74881A'
fprintf( file, off_74881A, j + ( i << 6) + ( ptr->indx << 7)); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/debug_bitmap_file/src/bitmap.c:1235:10: error: use of undeclared identifier 'unk_74881E'
fwrite( &unk_74881E, 1uLL, 3uLL, file); 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/debug_bitmap_file/src/obj/bitmap.o] Error 1
